--- a/templates/de/welcome.html
+++ b/templates/de/welcome.html
@@ -11,10 +11,8 @@
     <p>Wir sind Team A-5 und wir sind hier um Ihnen bei der Ausfüllung Ihrer Dokumente auszuhelfen, damit Sie
         ein sorgenloses Leben in Deutschlangd haben!
         Wir arbeiten daran jegliche notwendige Information für Sie zu übersetzen, als auch jeglichen Schritt genauestens
-        zu
-        erklären.
+        zu erklären.
     </p>
-    <br>
 
     <p>
         Unser Team besteht aus 6 Studenten der Hochschule Mannheim in Deutschland.
