Bg site translation ready

--- a/templates/bg/gez_explanation.html
+++ b/templates/bg/gez_explanation.html
@@ -29,7 +29,7 @@
     <h3> Ако искате да започнете сега, просто натиснете бутона за стартиране.</h3>
     <ul>
         <li>
-            <input type="submit" value="СТАРТ" onclick="">
+            <input type="submit" value="Старт" onclick="">
         </li>
     </ul>
 </form>
