--- a/templates/bg/home.html
+++ b/templates/bg/home.html
@@ -12,10 +12,10 @@
                 <a href="">Регистрация на дома</a>
         </li>
         <li>
-                <a href="/{{language}}/gez/general_information"> Адресна регистрация</a>
+                <a href="/{{language}}/gez/gez_explanation">Радио Регистрация</a>
         </li>
         <li>
-                <a href="">Защита на детето</a>
+                <a href="">Регистрация за детска градина</a>
         </li>
         <li></li>
 </ul>
