--- a/templates/bg/final.html
+++ b/templates/bg/final.html
@@ -10,7 +10,7 @@
 <hr>
 <h2> Моля, не забравяйте, че все още се нуждаем от Вашия подпис и датата като потвърждение! Тук трябва да влезете! <details>
     <summary>Изглежда по този начин!</summary>
-    <img src="url_for('static', filename='images/Part_3_bg.png')" class="image">
+    <img src="{{url_for('static', filename='images/Part_3_bg.png')}}" class="image">
     </details>
     <br> В случай, че сте взели решението да преведете пари чрез SEPA, трябва да се подпишете отново!
     <details><summary>Изглежда ето така!</summary>
