--- a/templates/bg/bg_base.html
+++ b/templates/bg/bg_base.html
@@ -27,7 +27,7 @@
 
     <nav>
         <div class="topnav" id="myTopnav">
-            <button class="active"><a href="/" class="cen"></a>Начална страница</button>
+            <button class="active"><a href="/" class="cen">Начална страница</a></button>
             <button class="document"><a href="/{{language}}/home">Документи</a></button>
             <div>
                 <a href=""></a>
