--- a/templates/bg/adress/adress2.html
+++ b/templates/bg/adress/adress2.html
@@ -22,7 +22,7 @@
     </span>
 </li>
 <li>
-    <label for="street_nr">Номер на улица:</label>
+    <label for="street_nr">Номер на улица</label>
     <input type="text" id="street_nr" name="street_nr" required>
     <span class="extra-info"><details><summary>
         Помощ?
