--- a/templates/bg/adress/adress3.html
+++ b/templates/bg/adress/adress3.html
@@ -8,7 +8,7 @@
     <form action="/{{language}}/gez/adress3" method="POST">
         <h1> Адрес 3 от 5</h1>
         <li>
-            <label for="adress_additions">Допълнителна информация за адрес(опционално) :</label>
+            <label for="adress_additions">Допълнителна информация за адрес(опционално)</label>
             <input type="text" id="adress_additions" name="adress_additions">
             <span class="extra-info"><details><summary>
                 Помощ?
