--- a/templates/bg/adress/adress4.html
+++ b/templates/bg/adress/adress4.html
@@ -8,7 +8,7 @@
     <form action="/{{language}}/gez/adress4" method="POST">
         <h1> Адрес 4 от 5</h1>
         <ul> <li>
-            <label for="zip_code">Пощенски код:</label>
+            <label for="zip_code">Пощенски код</label>
             <input type="text" id="zip_code" name="zip_code" pattern="[0-9]{5}$" required>
             <span class="extra-info"><details><summary>Помощ?
 
@@ -20,7 +20,7 @@
         </span>
         </li>
         <li>
-            <label for="city">Град:</label>
+            <label for="city">Град</label>
             <input type="text" id="city" name="city" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*" required>
             <span class="extra-info"><details><summary>Помощ?
 
