--- a/templates/bg/adress/adress5.html
+++ b/templates/bg/adress/adress5.html
@@ -9,7 +9,7 @@
         <h1> Адрес 5 от 5</h1>
         <ul>
         <li>
-            <label for="phone_number">Телефон: (опционално)</label>
+            <label for="phone_number">Телефон (опционално)</label>
             <input type="tel" id="phone_number" name="phone_number">
             <span class="extra-info"><details><summary>Помощ?
 
