--- a/templates/bg/sepa/sepa4.html
+++ b/templates/bg/sepa/sepa4.html
@@ -9,7 +9,7 @@
     <h1>Мандат за директен дебит на SEPA 4 от 4</h1>
     <ul>
         <li>
-            <label for="IBAN">IBAN номер:</label>
+            <label for="IBAN">IBAN номер</label>
             <input type="text" id="IBAN" name="IBAN" pattern="\p{Upper}{2}[0-9]{20}$" required>
             <span><details>
                 <summary>
@@ -21,7 +21,7 @@
             </details> </span>
         </li>
         <li>
-            <label for="BIC">BIC номер:</label>
+            <label for="BIC">BIC номер</label>
             <input type="text" id="BIC" name="BIC" pattern="[^\p{Lower}]{7,8}[0-9]{0,4}$" required>
             <span><details>
                 <summary>
