--- a/templates/fr/adress/adress4.html
+++ b/templates/fr/adress/adress4.html
@@ -8,7 +8,7 @@
     <form action="/{{language}}/gez/adress4" method="POST">
         <h1> Adresse 4 sur 5</h1>
         <ul> <li>
-            <label for="zip_code">Code postal:</label>
+            <label for="zip_code">Code postal</label>
             <input type="text" id="zip_code" name="zip_code" pattern="[0-9]{5}$" required>
             <span class="extra-info"><details><summary>Help?
 
@@ -20,7 +20,7 @@
         </span>
         </li>
         <li>
-            <label for="city">Ville:</label>
+            <label for="city">Ville</label>
             <input type="text" id="city" name="city" pattern="^[A-Za-zzßÄÖÜäöü]+(([-]|[\s])?[A-Za-zzßÄÖÜäöü]+)*" required>
             <span class="extra-info"><details><summary>Aider?
 
