--- a/templates/bg/sepa/sepa2.html
+++ b/templates/bg/sepa/sepa2.html
@@ -9,7 +9,7 @@
     <h1>Мандат за директен дебит на SEPA 2 от 4</h1>
     <ul>
         <li>
-            <label for="street">Улица:</label>
+            <label for="street">Улица</label>
             <input type="text" id="street" name="street"  pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*" required>
             <span><details>
                 <summary>
@@ -19,7 +19,7 @@
             </details> </span>
         </li>
         <li>
-            <label for="home_nr">Номер на улица:</label>
+            <label for="home_nr">Номер на улица</label>
             <input type="text" id="street_nr" name="street_nr" required>
             <span><details>
                 <summary>
