--- a/templates/bg/sepa/sepa3.html
+++ b/templates/bg/sepa/sepa3.html
@@ -9,7 +9,7 @@
     <h1>Мандат за директен дебит на SEPA 3 от 4</h1>
     <ul>
         <li>
-            <label for="ZIP_code">Пощенски код:</label>
+            <label for="ZIP_code">Пощенски код</label>
             <input type="text" id="ZIP_code" name="ZIP_code" pattern="[0-9]{5}$" required>
             <span><details>
                 <summary>
@@ -19,7 +19,7 @@
             </details> </span>
         </li>
         <li>
-            <label for="area">Град:</label>
+            <label for="area">Град</label>
             <input type="text" id="area" name="area" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*" required>
             <span><details>
                 <summary>
