--- a/templates/de/sepa/sepa2.html
+++ b/templates/de/sepa/sepa2.html
@@ -9,7 +9,7 @@
     <h1>SEPA-Lastschriftmandat 2/4</h1>
     <ul>
         <li>
-            <label for="street">Starße</label>
+            <label for="street">Straße</label>
             <input type="text" id="street" name="street" pattern="^[A-Za-zzßÄÖÜäöü]+(([-]|[\s])?[A-Za-zzßÄÖÜäöü]+)*" required>
             <span>
                 <details>
