--- a/templates/fr/adress/adress1.html
+++ b/templates/fr/adress/adress1.html
@@ -9,7 +9,7 @@
         <h1> Adresse 1 sur 5</h1>
         <ul>
             <li>
-                <label for="date_registered">Date d'enregistrement:</label>
+                <label for="date_registered">Date d'enregistrement</label>
                 <input type="date" id="date_registered" name="date_reg" required>
                 <span> <details><summary>
                     Aider?
