--- a/templates/fr/adress/adress2.html
+++ b/templates/fr/adress/adress2.html
@@ -9,7 +9,7 @@
         <h1> Adresse 2 sur 5</h1>
         <ul>
             <li>
-    <label for="street">rue:</label>
+    <label for="street">Rue</label>
     <input type="text" name="street" id="street" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*" required>
     <span class="extra-info"> <details><summary>
         Aider?
@@ -23,7 +23,7 @@
     </span>
 </li>
 <li>
-    <label for="street_nr">Numéro de rue:</label>
+    <label for="street_nr">Numéro de rue</label>
     <input type="text" id="street_nr" name="street_nr" required>
     <span class="extra-info"><details><summary>
         Aider?
