--- a/templates/fr/adress/adress3.html
+++ b/templates/fr/adress/adress3.html
@@ -8,7 +8,7 @@
     <form action="/{{language}}/gez/adress3" method="POST">
         <h1> Adresse 3 sur 5</h1>
         <li>
-            <label for="adress_additions">Additions d'adresse (facultatif) :</label>
+            <label for="adress_additions">Additions d'adresse (facultatif)</label>
             <input type="text" id="adress_additions" name="adress_additions">
             <span class="extra-info"><details><summary>
                 Aider?
