--- a/templates/fr/sepa/sepa2.html
+++ b/templates/fr/sepa/sepa2.html
@@ -9,7 +9,7 @@
     <h1>Mandat de prélèvement SEPA 2 sur 4</h1>
     <ul>
         <li>
-            <label for="street">rue:</label>
+            <label for="street">Rue</label>
             <input type="text" id="street" name="street" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*" required>
             <span><details>
                 <summary>
@@ -19,7 +19,7 @@
             </details> </span>
         </li>
         <li>
-            <label for="home_nr">Numéro de rue:</label>
+            <label for="home_nr">Numéro de rue</label>
             <input type="text" id="street_nr" name="street_nr" required>
             <span><details>
                 <summary>
