--- a/templates/fr/sepa/sepa3.html
+++ b/templates/fr/sepa/sepa3.html
@@ -9,7 +9,7 @@
     <h1>Mandat de prélèvement SEPA 3 sur 4</h1>
     <ul>
         <li>
-            <label for="ZIP_code">Code postal:</label>
+            <label for="ZIP_code">Code postal</label>
             <input type="text" id="ZIP_code" name="ZIP_code" pattern="[0-9]{5}$" required>
             <span><details>
                 <summary>
@@ -21,7 +21,7 @@
             </details> </span>
         </li>
         <li>
-            <label for="area">Ville:</label>
+            <label for="area">Ville</label>
             <input type="text" id="area" name="area" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)" required>
             <span><details>
                 <summary>
