more navbar fix

--- a/templates/de/de_base.html
+++ b/templates/de/de_base.html
@@ -27,8 +27,8 @@
 
     <nav class="Navbar">
         <div class="topnav" id="myTopnav">
-            <button class="active"><a href="/" class="cen">Startseite</a></button>
-            <button class="document"><a href="/{{language}}/home" class="cen">Dokumente</a></button>
+            <button class="active"><a href="/">Startseite</a></button>
+            <button class="document"><a href="/{{language}}/home">Dokumente</a></button>
             <div>
                 <a href=""></a>
                 <a href="?lang=en"> <img src="{{url_for('static', filename='images/us.png')}}"> </a>
@@ -37,8 +37,8 @@
                 <a href="?lang=fr"> <img src="{{url_for('static', filename='images/fr.png')}}"> </a>
             </div>
             <div>
-                <button class="about_and_logout"><a href="/{{language}}/about_us" class="cen">Über uns</a></button>
-                <button class="about_and_logout"><a href="" class="cen">Logout</a></button>
+                <button class="about_and_logout"><a href="/{{language}}/about_us">Über uns</a></button>
+                <button class="about_and_logout"><a href="">Logout</a></button>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
             </div>
         </div>
