--- a/templates/bg/bg_base.html
+++ b/templates/bg/bg_base.html
@@ -27,7 +27,7 @@
 
     <nav>
         <div class="topnav" id="myTopnav">
-            <button class="active"><a href="/" class="cen">Начална страница</a></button>
+            <button class="active"><a href="/">Начална страница</a></button>
             <button class="document"><a href="/{{language}}/home">Документи</a></button>
             <div>
                 <a href=""></a>
@@ -38,7 +38,7 @@
             </div>
             <div>
                 <button class="about_and_logout"><a href="/{{language}}/about_us">За нас</a></button>
-                <button class="about_and_logout"><a href="" class="cen">Изход</a></button>
+                <button class="about_and_logout"><a href="">Изход</a></button>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
             </div>
         </div>
