privacy polivy und about

--- a/templates/de/about_us.html
+++ b/templates/de/about_us.html
@@ -64,7 +64,7 @@
         Hier haben wir Muhammed Yavuz, welcher die Über uns Seite
         schreibt die sie gerade lesen!Außerdem hilft er bei dem Login aus.
         Erreichbar ist er über seine Mail:
-        <a href="16@stud.hs-mannheim.de">16@stud.hs-mannheim.de</a>
+        <a href="muhammed.yavuz@stud.hs-mannheim.de">16@stud.hs-mannheim.de</a>
     </p>
 
     <p id="finalsentence">
