--- a/templates/bg/about_us.html
+++ b/templates/bg/about_us.html
@@ -30,14 +30,14 @@
 <p class="boxed">
     <img src="{{url_for('static', filename='images/Profil 1.png')}}" class="image"> <br>Първият член е Георги Хайдуков, който отговаря
     бисквитките и нашите политики за поверителност. Можете да се свържете с него на имейла му: <a
-        href="11@stud.hs-mannheim.de">11@stud.hs-mannheim.de</a>
+        href="georgi.haydukov@stud.hs-mannheim.de">11@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
 <br>
 <p class="boxed">
     <img src="{{url_for('static', filename='images/Profil 2.png')}}" class="image"> <br>Освен това имаме Александър Хистров, нашият Flask специалист и
-    български преводач. Можете да се свържете с него на имейла му: <a href="12@stud.hs-mannheim.de">12@stud.hs-mannheim.de</a>
+    български преводач. Можете да се свържете с него на имейла му: <a href="aleksandar.histrov@stud.hs-mannheim.de">12@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
@@ -46,7 +46,7 @@
     <img src="{{url_for('static', filename='images/Profil 3.png')}}" class="image"> <br>Това е Робърт Ендлер, който работи не само върху нашето правно известие,
      но също така
     прави френски превод на уебсайта. Можете да се свържете с него на имейла му: <a
-        href="13@stud.hs-mannheim.de">13@stud.hs-mannheim.de</a>
+        href="robert.endler@stud.hs-mannheim.de">13@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
@@ -54,14 +54,14 @@
 <p class="boxed">
     <img src="{{url_for('static', filename='images/Profil 4.png')}}" class="image"> <br>Тук е Иляс Бал, който работи по нашите уроци и
     обяснения за бъдещите ви документи. Можете да се свържете с него на имейла му: <a
-        href="14@stud.hs-mannheim.de">14@stud.hs-mannheim.de</a>
+        href="ilyas.bal@stud.hs-mannheim.de">14@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
 <br>
 <p class="boxed">
     <img src="{{url_for('static', filename='images/Profil 5.png')}}" class="image"> <br>Ленард Гулде също работи по нашите уроци и помага
-    нашата система за вход. Можете да се свържете с него на имейла му: <a href="15@stud.hs-mannheim.de">15@stud.hs-mannheim.de</a>
+    нашата система за вход. Можете да се свържете с него на имейла му: <a href="lennart.gulde@stud.hs-mannheim.de">15@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
@@ -69,7 +69,7 @@
 <p class="boxed">
     <img src="{{url_for('static', filename='images/Profil 6.png')}}" class="image"> <br>Накрая тук е Мохамед Явуз, който е отговорен за
     информацията, която четете в момента! Освен това той работи върху регистрацията в нашия уебсайт, точно както и върху менюто. Можете да се свържете отдолу
-    неговия имейл: <a href="16@stud.hs-mannheim.de">16@stud.hs-mannheim.de</a>
+    неговия имейл: <a href="muhammed.yavuz@stud.hs-mannheim.de">16@stud.hs-mannheim.de</a>
 </p>
 
 <p id="finalsentence">
