--- a/templates/fr/about_us.html
+++ b/templates/fr/about_us.html
@@ -30,14 +30,14 @@
 <p class="boxed">
     <img src="{{url_for('static', filename='images/Profil 1.png')}}" class="image"> <br>Le premier membre est Georgi Haydukov, responsable de
     les cookies et nos politiques de confidentialité. Vous pouvez le joindre sous son email: <a
-        href="11@stud.hs-mannheim.de">11@stud.hs-mannheim.de</a>
+        href="georgi.haydukov@stud.hs-mannheim.de">11@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
 <br>
 <p class="boxed">
     <img src="{{url_for('static', filename='images/Profil 2.png')}}" class="image"> <br>De plus, nous avons Aleksandar Histrov, notre spécialiste Flask et
-    traducteur bulgare. Vous pouvez le joindre sous son email: <a href="12@stud.hs-mannheim.de">12@stud.hs-mannheim.de</a>
+    traducteur bulgare. Vous pouvez le joindre sous son email: <a href="aleksandar.histrov@stud.hs-mannheim.de">12@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
@@ -45,7 +45,7 @@
 <p class="boxed">
     <img src="{{url_for('static', filename='images/Profil 3.png')}}" class="image"> <br>C'est Robert Endler qui travaille non seulement sur notre empreinte, mais aussi
     sur notre traduction en français. Vous pouvez le joindre sous son email: <a
-        href="13@stud.hs-mannheim.de">13@stud.hs-mannheim.de</a>
+        href="robert.endler@stud.hs-mannheim.de">13@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
@@ -53,14 +53,14 @@
 <p class="boxed">
     <img src="{{url_for('static', filename='images/Profil 4.png')}}" class="image"> <br>Voici Ilyas Bal qui travaille sur nos tutoriels et
     des explications pour vos futurs documents. Vous pouvez le joindre sous son email:<a
-        href="14@stud.hs-mannheim.de">14@stud.hs-mannheim.de</a>
+        href="ilyas.bal@stud.hs-mannheim.de">14@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
 <br>
 <p class="boxed">
     <img src="/images/profil 5.png" class="image"> <br>Lennart Gulde travaille également sur nos tutoriels et aide sur
-    notre système de connexion. Vous pouvez le joindre sous son email: <a href="15@stud.hs-mannheim.de">15@stud.hs-mannheim.de</a>
+    notre système de connexion. Vous pouvez le joindre sous son email: <a href="lennart.gulde@stud.hs-mannheim.de">15@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
@@ -68,7 +68,7 @@
 <p class="boxed">
     <img src="{{url_for('static', filename='images/Profil 6.png')}}" class="image"> <br>Enfin voici Muhammed Yavuz, qui est responsable de la
     les informations que vous lisez en ce moment! De plus, il travaille sur le login, tout comme sur le menu. Vous pouvez l'atteindre sous
-    son email: <a href="16@stud.hs-mannheim.de">16@stud.hs-mannheim.de</a>
+    son email: <a href="muhammed.yavuz@stud.hs-mannheim.de">16@stud.hs-mannheim.de</a>
 </p>
 
 <p id="finalsentence">
