Erklärung Name verbessert

--- a/templates/de/sepa/sepa1.html
+++ b/templates/de/sepa/sepa1.html
@@ -14,8 +14,9 @@
             <span>
                 <details>
                     <summary>Hilfe?</summary>
-                    <p>Bitte geben Sie den Namen des Kontoinhabers ein. Bitte beachten Sie, dass der Kontoinhaber von
-                        der
+                    <p>Bitte geben Sie den Namen des Kontoinhabers in der folgenden Reihenfolge an: Titel/Nachname/Vorname.
+                        Zum Beispiel: von Mustermann Max.
+                        Bitte beachten Sie, dass der Kontoinhaber von der
                         Person die den Antrag stellt abweichen kann.<br>
                     <i>Sie können keine Ziffern, noch Sonderzeichen außer einen Bindestrich (-) eingeben.</i></p>
             </span>
