--- a/templates/bg/final.html
+++ b/templates/bg/final.html
@@ -17,7 +17,7 @@
         <img src="{{url_for('static', filename='images/Part_5_bg.png')}}" class="image">
     </details></h2>
     
-<p>Ако се нуждаете от някаква допълнителна помощ, моля, не се колебайте да се свържете с линията за помощ. <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim"></a>ANIMA </a></p>
+<p>Ако се нуждаете от някаква допълнителна помощ, моля, не се колебайте да се свържете с линията за помощ. <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim">ANIMA </a></p>
 <p>
     Ако искате да попълните някой друг документ, моля кликнете <a href="/{{language}}/home">тук</a>.
 </p>
