--- a/templates/fr/final.html
+++ b/templates/fr/final.html
@@ -17,7 +17,7 @@
         <img src="{{url_for('static', filename='images/Part_5_fr.png')}}" class="image">
     </details></h2>
     
-<p>Si vous avez besoin d'une aide supplémentaire, n'hésitez pas à contacter la ligne d'assistance.<a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim"></a>ANIMA </a></p>
+<p>Si vous avez besoin d'une aide supplémentaire, n'hésitez pas à contacter la ligne d'assistance.<a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim">ANIMA </a></p>
 <p>
     Si vous souhaitez remplir un autre document, veuillez cliquer sur<a href="/{{language}}/home">ici</a>.
 </p>
