Bulgarian page updated

--- a/templates/bg/welcome.html
+++ b/templates/bg/welcome.html
@@ -66,10 +66,10 @@
             <a href=" ">Регистрация на дома</a>
         </li>
         <li class="listCenter">
-            <a href="/{{language}}/gez/gez_explanation"> GEZ</a>
+            <a href="/{{language}}/gez/gez_explanation">Радио Регистрация</a>
         </li>
         <li class="listCenter">
-            <a href=" ">Защита на детето</a>
+            <a href=" ">Регистрация за детска градина</a>
         </li>
         <li></li>
     </ul>
