--- a/templates/de/about_us.html
+++ b/templates/de/about_us.html
@@ -27,7 +27,7 @@
     </h2>
     <p class="boxed">
         <img src="{{url_for('static', filename='images/Profil 1.png')}}" class="image"> <br>
-        Das ist Georgy Haydukov, der für die Cookies und unserer Datenschutz-Seite zuständig ist.
+        Das ist Georgi Haydukov, der für die Cookies und unserer Datenschutz-Seite zuständig ist.
         Erreichbar ist er über seine Mail:
         <a href="georgi.haydukov@stud.hs-mannheim.de">georgi.haydukov@stud.hs-mannheim.de</a>
     </p>
