SEPA überarbeitet, required entfernt

--- a/templates/bg/sepa/sepa3.html
+++ b/templates/bg/sepa/sepa3.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
             <label for="ZIP_code">Пощенски код</label>
-            <input type="text" id="ZIP_code" name="ZIP_code" pattern="[0-9]{5}$" required>
+            <input type="text" id="ZIP_code" name="ZIP_code" pattern="[0-9]{5}$">
             <span><details>
                 <summary>
                     Помощ?
@@ -20,7 +20,7 @@
         </li>
         <li>
             <label for="area">Град</label>
-            <input type="text" id="area" name="area" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*" required>
+            <input type="text" id="area" name="area" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*">
             <span><details>
                 <summary>
                     Помощ?
