--- a/templates/de/sepa/sepa1.html
+++ b/templates/de/sepa/sepa1.html
@@ -10,11 +10,12 @@
     <ul>
         <li>
             <label for="name">Name</label>
-            <input type="text" name="fullName" id="name" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
+            <input type="text" name="fullName" id="name" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*">
             <span>
                 <details>
                     <summary>Hilfe?</summary>
-                    <p>Bitte geben Sie den Namen des Kontoinhabers in der folgenden Reihenfolge an: Titel/Nachname/Vorname.
+                    <p> Geben Sie nur einen Namen an, wenn der Kontoinhaber nicht der angemeldete Beitragszahler ist!
+                        Bitte geben Sie den Namen in der folgenden Reihenfolge an: Titel/Nachname/Vorname.
                         Zum Beispiel: von Mustermann Max.
                         Bitte beachten Sie, dass der Kontoinhaber von der
                         Person die den Antrag stellt abweichen kann.<br>
