--- a/templates/en/sepa/sepa1.html
+++ b/templates/en/sepa/sepa1.html
@@ -10,13 +10,14 @@
     <ul>
         <li>
         <label for="name">Name</label>
-        <input type="text" name="fullName" id="name" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>        
+        <input type="text" name="fullName" id="name" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*">        
         <span><details>
             <summary>
                 Help?
             </summary>
-            Enter your full name in the following order: title, last name, first name
-            <br> For example: Dr. Mustermann Max
+            Only enter a name if the account holder is not the registered contributor!
+            Enter the full name in the following order: title, last name, first name
+            <br> For example: von Mustermann Max
             <br> If this bank account is not yours, please write down the name of this accounts owner.<br>
             <i>You can not write any numbers, nor any special signs except a minus (-)</i>
             </span>
