--- a/templates/bg/sepa/sepa1.html
+++ b/templates/bg/sepa/sepa1.html
@@ -10,11 +10,13 @@
     <ul>
         <li>
         <label for="name">Име</label>
-        <input type="text" name="fullName" id="name" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
+        <input type="text" name="fullName" id="name" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*">
         <span><details>
             <summary>
                 Помощ?
-            </summary>Въведете пълното си име в следния ред: заглавие, фамилия, име<br> Например: д-р Мустерман Макс
+            </summary>
+            Въведете име само ако притежателят на акаунта не е регистриран сътрудник!
+            Въведете пълното си име в следния ред: заглавие, фамилия, име<br> Например: д-р Мустерман Макс
         <br> Ако тази банкова сметка не е ваша, моля, запишете името на собственика на тази сметка.
         <i>Не можете да пишете никакви цифри, нито някакви специални знаци с изключение на минус (-)</i></span>
         </details>
