--- a/templates/bg/sepa/sepa2.html
+++ b/templates/bg/sepa/sepa2.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
             <label for="street">Улица</label>
-            <input type="text" id="street" name="street"  pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*" required>
+            <input type="text" id="street" name="street"  pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*">
             <span><details>
                 <summary>
                     Помощ?
@@ -20,7 +20,7 @@
         </li>
         <li>
             <label for="home_nr">Номер на улица</label>
-            <input type="text" id="street_nr" name="street_nr" required>
+            <input type="text" id="street_nr" name="street_nr">
             <span><details>
                 <summary>
                     Помощ?
