--- a/templates/de/sepa/sepa3.html
+++ b/templates/de/sepa/sepa3.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
             <label for="ZIP_code">PLZ</label>
-            <input type="text" id="ZIP_code" name="ZIP_code" pattern="[0-9]{5}$" required>
+            <input type="text" id="ZIP_code" name="ZIP_code" pattern="[0-9]{5}$">
             <span>
                 <details>
                     <summary>Hilfe?</summary>
@@ -24,7 +24,7 @@
         </li>
         <li>
             <label for="area">Stadt</label>
-            <input type="text" id="area" name="area" pattern="^[A-Za-zzßÄÖÜäöü]+(([-]|[\s])?[A-Za-zzßÄÖÜäöü]+)*" required>
+            <input type="text" id="area" name="area" pattern="^[A-Za-zzßÄÖÜäöü]+(([-]|[\s])?[A-Za-zzßÄÖÜäöü]+)*">
             <span>
                 <details>
                     <summary>Hilfe?</summary>
