--- a/templates/fr/sepa/sepa1.html
+++ b/templates/fr/sepa/sepa1.html
@@ -10,11 +10,13 @@
     <ul>
         <li>
         <label for="name">Nom</label>
-        <input type="text" name="fullName" id="name" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
+        <input type="text" name="fullName" id="name" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*">
         <span><details>
             <summary>
                 Aider?
-            </summary>Entrez votre nom complet dans l'ordre suivant: titre, nom, prénom<br> 
+            </summary>
+            Entrez un nom uniquement si le titulaire du compte n'est pas le contributeur inscrit!
+            Entrez votre nom complet dans l'ordre suivant: titre, nom, prénom<br> 
             <br>Si ce compte bancaire n'est pas le vôtre, veuillez noter le nom du propriétaire de ce compte.
             <br>Par exemple: Dr Mustermann Max
             <i>Vous pouvez noter plusieurs prénoms, au cas où vous en auriez plus d'un. Vous ne pouvez pas écrire de nombres, ni de signes spéciaux sauf un signe moins (-)</i>
