--- a/templates/fr/sepa/sepa3.html
+++ b/templates/fr/sepa/sepa3.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
             <label for="ZIP_code">Code postal</label>
-            <input type="text" id="ZIP_code" name="ZIP_code" pattern="[0-9]{5}$" required>
+            <input type="text" id="ZIP_code" name="ZIP_code" pattern="[0-9]{5}$">
             <span><details>
                 <summary>
                     Aider?
@@ -22,7 +22,7 @@
         </li>
         <li>
             <label for="area">Ville</label>
-            <input type="text" id="area" name="area" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)" required>
+            <input type="text" id="area" name="area" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)">
             <span><details>
                 <summary>
                     Aider?
