--- a/templates/de/final.html
+++ b/templates/de/final.html
@@ -19,7 +19,7 @@
     
 <p>Wenn Ihnen irgendwas unklar geblieben ist, oder Sie weitere Fragen haben, kontaktieren Sie bitte eine Beratungsstelle wie die ANIMA unter <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim">ANIMA </a></p>
 <p>
-    Wenn Sie irgnedwelche anderen Dokumente ausfüllen müssen, bitte klicken Sie <a href="/{{language}}/gez/home">hier</a>.
+    Wenn Sie irgnedwelche anderen Dokumente ausfüllen müssen, bitte klicken Sie <a href="/{{language}}/home">hier</a>.
 </p>
 
 {% endblock %}
