Basic login and logout Functionality

--- a/templates/bg/bg_base.html
+++ b/templates/bg/bg_base.html
@@ -38,7 +38,7 @@
             </div>
             <div>
                 <button class="about_and_logout"><a href="/{{language}}/about_us">За нас</a></button>
-                <button class="about_and_logout"><a href="">Изход</a></button>
+                <button class="about_and_logout"><a href="/logout">Изход</a></button>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
             </div>
         </div>
