--- a/templates/en/en_base.html
+++ b/templates/en/en_base.html
@@ -38,7 +38,7 @@
             </div>
             <div>
                 <button class="about_and_logout"><a href="/{{language}}/about_us">About us</a></button>
-                <button class="about_and_logout"><a href="">Logout</a></button>
+                <button class="about_and_logout"><a href="/logout">Logout</a></button>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
             </div>
         </div>
