--- a/templates/fr/fr_base.html
+++ b/templates/fr/fr_base.html
@@ -37,7 +37,7 @@
             </div>
             <div>
                 <button class="about_and_logout"><a href="/{{language}}/about_us">À propos</a></button>
-                <button class="about_and_logout"><a href="">Se déconnecter</a></button>
+                <button class="about_and_logout"><a href="/logout">Se déconnecter</a></button>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
             </div>
         </div>
