--- a/templates/en/register.html
+++ b/templates/en/register.html
@@ -17,10 +17,10 @@
         </li>
         <li>
             <label for="">Password</label>
-            <input type="password" name="" id="password1" minlength="6" required>
+            <input type="password" name="password" id="password1" minlength="6" required>
             <span>Choose your password</span>
             <br>
-            <input type="password" name="" id="password2" required>
+            <input type="password" name="password2" id="password2" required>
             <span>Repeat your password please</span>
         </li>
         <li>
