Having with Databases

--- a/templates/bg/register.html
+++ b/templates/bg/register.html
@@ -16,10 +16,10 @@
         </li>
         <li>
             <label for="">Парола</label>
-            <input type="password" name="" id="password1" required>
+            <input type="password" name="password" id="password1" required>
             <span>Изберете Вашата парола</span>
             <br>
-            <input type="password" name="" id="password2" required>
+            <input type="password" name="password2" id="password2" required>
             <span>Повторете Вашата парола, моля</span>
         </li>
         <li>
