--- a/templates/de/register.html
+++ b/templates/de/register.html
@@ -17,10 +17,10 @@
         </li>
         <li>
             <label for="">Passwort</label>
-            <input type="password" name="" id="password1" required>
+            <input type="password" name="password" id="password1" required>
             <span>Bitte wählen Sie ihr Passwort.</span>
             <br>
-            <input type="password" name="" id="password2" required>
+            <input type="password" name="password2" id="password2" required>
             <span>Bitte wiederholen Sie ihr Passwort.</span>
         </li>
         <li>
