--- a/templates/fr/register.html
+++ b/templates/fr/register.html
@@ -17,10 +17,10 @@
         </li>
         <li>
             <label for="">Mot de passe</label>
-            <input type="password" name="" id="password1" required>
+            <input type="password" name="password" id="password1" required>
             <span>Choisissez votre mot de passe</span>
             <br>
-            <input type="password" name="" id="password2" required>
+            <input type="password" name="password2" id="password2" required>
             <span>Répétez votre mot de passe s'il vous plaît</span>
         </li>
         <li>
