--- a/templates/de/welcome.html
+++ b/templates/de/welcome.html
@@ -38,6 +38,13 @@
             <input type="password" name="password" id="pWord">
             <span>Geben Sie ihr Passwort ein</span>
         </li>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                <li class="{{ category }}">{{ message }}</li>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
         <li>
             <input type="submit" value="Submit">
         </li>
