--- a/templates/fr/register.html
+++ b/templates/fr/register.html
@@ -15,6 +15,13 @@
             <input type="text" name="userNameReg" id="uNameReg" required>
             <span>Choisissez votre nom d'utilisateur</span>
         </li>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                <li class="{{ category }}">{{ message }}</li>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
         <li>
             <label for="">Mot de passe</label>
             <input type="password" name="password" id="password1" required>
