--- a/templates/fr/welcome.html
+++ b/templates/fr/welcome.html
@@ -39,6 +39,13 @@
                     <input type="password" name="password" id="pWord">
                     <span>Entrez votre mot de passe ici s'il vous plaît</span>
                 </li>
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        {% for message in messages %}
+                        <li class="{{ category }}">{{ message }}</li>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
                 <li>
                     <ul>
                         <li>
