--- a/templates/bg/final.html
+++ b/templates/bg/final.html
@@ -18,6 +18,10 @@
     </details></h2>
     
 <p>Ако се нуждаете от някаква допълнителна помощ, моля, не се колебайте да се свържете с линията за помощ. <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim">ANIMA </a></p>
+<h2>Ако искате да изтеглите документа си като pdf, моля, щракнете върху бутона!</h2>   <!-- text nochmal checken!-->
+<form method="get" action="gez_test_form.pdf">                       <!-- Filler zum downloaden-->
+    <button type="submit">Изтегли!</button>
+ </form>
 <p>
     Ако искате да попълните някой друг документ, моля кликнете <a href="/{{language}}/home">тук</a>.
 </p>
