--- a/templates/fr/final.html
+++ b/templates/fr/final.html
@@ -18,6 +18,10 @@
     </details></h2>
     
 <p>Si vous avez besoin d'une aide supplémentaire, n'hésitez pas à contacter la ligne d'assistance.<a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim">ANIMA </a></p>
+<h2>Si vous souhaitez télécharger votre document au format pdf, veuillez cliquer sur le bouton !</h2>
+<form method="get" action="gez_test_form.pdf">                       <!-- Filler zum downloaden-->
+    <button type="submit">Download!</button>
+ </form>
 <p>
     Si vous souhaitez remplir un autre document, veuillez cliquer sur<a href="/{{language}}/home">ici</a>.
 </p>
