--- a/templates/de/final.html
+++ b/templates/de/final.html
@@ -18,6 +18,10 @@
     </details></h2>
     
 <p>Wenn Ihnen irgendwas unklar geblieben ist, oder Sie weitere Fragen haben, kontaktieren Sie bitte eine Beratungsstelle wie die ANIMA unter <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim">ANIMA </a></p>
+<h2>Wenn sie Ihr Dokument als PDF-Datei herunterladen wollen, klicken Sie bitte auf den Button!</h2>
+<form method="get" action="gez_test_form.pdf">                       <!-- Filler zum downloaden-->
+    <button type="submit">Download!</button>
+ </form>
 <p>
     Wenn Sie irgnedwelche anderen Dokumente ausfüllen müssen, bitte klicken Sie <a href="/{{language}}/home">hier</a>.
 </p>
