--- a/templates/en/adress/adress4.html
+++ b/templates/en/adress/adress4.html
@@ -9,7 +9,7 @@
         <h1> Address 4 of 5</h1>
         <ul> <li>
             <label for="zip_code">ZIP Code</label>
-            <input type="text" id="zip_code" name="zip_code" pattern="[0-9]{5}$"  required>
+            <input type="text" id="zip_code" name="zip_code" pattern="[0-9]{5}$" value="{{fields.zip_code if fields.zip_code != None else '' }}" required>
             <span class="extra-info"><details><summary>Help?
 
             </summary>
@@ -21,7 +21,7 @@
         </li>
         <li>
             <label for="city">City</label>
-            <input type="text" id="city" name="city" pattern="^[A-Za-zzßÄÖÜäöü]+(([-]|[\s])?[A-Za-zzßÄÖÜäöü]+)*" required>
+            <input type="text" id="city" name="city" pattern="^[A-Za-zzßÄÖÜäöü]+(([-]|[\s])?[A-Za-zzßÄÖÜäöü]+)*" value="{{fields.city if fields.city != None else '' }}" required>
             <span class="extra-info"><details><summary>Help?
 
             </summary>
