--- a/templates/en/adress/adress2.html
+++ b/templates/en/adress/adress2.html
@@ -10,7 +10,7 @@
         <ul>
             <li>
     <label for="street">Street</label>
-    <input type="text" name="street" id="street" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*" required>
+    <input type="text" name="street" id="street" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*" value="{{fields.street if fields.street != None else '' }}" required>
     <span class="extra-info"> <details><summary>
         Help?
     </summary> 
@@ -24,7 +24,7 @@
 </li>
 <li>
     <label for="street_nr">Street-number</label>
-    <input type="text" id="street_nr" name="street_nr" required>
+    <input type="text" id="street_nr" name="street_nr" value="{{fields.streetnumber if fields.streetnumber != None else '' }}" required>
     <span class="extra-info"><details><summary>
         Help?
     </summary> 
