--- a/templates/en/adress/adress3.html
+++ b/templates/en/adress/adress3.html
@@ -9,7 +9,7 @@
         <h1> Address 3 of 5</h1>
         <li>
             <label for="adress_additions">Adress additions(optional)</label>
-            <input type="text" id="adress_additions" name="adress_additions">
+            <input type="text" id="adress_additions" name="adress_additions" value="{{fields.address_addition if fields.address_addition != None else '' }}" >
             <span class="extra-info"><details><summary>
                 Help?
             </summary> 
