--- a/templates/en/sepa/sepa2.html
+++ b/templates/en/sepa/sepa2.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
             <label for="street">Street</label>
-            <input type="text" id="street" name="street" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*">
+            <input type="text" id="street" name="street" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*" value="{{fields.street_sepa if fields.street_sepa != None else '' }}">
             <span><details>
                 <summary>
                     Help?
@@ -20,7 +20,7 @@
         </li>
         <li>
             <label for="home_nr">Street number</label>
-            <input type="text" id="street_nr" name="street_nr">
+            <input type="text" id="street_nr" name="street_nr" value="{{fields.streetnumber_sepa if fields.streetnumber_sepa != None else '' }}">
             <span><details>
                 <summary>
                     Help?
