--- a/templates/en/sepa/sepa3.html
+++ b/templates/en/sepa/sepa3.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
             <label for="ZIP_code">ZIP</label>
-            <input type="text" id="ZIP_code" name="ZIP_code" pattern="[0-9]{5}$">
+            <input type="text" id="ZIP_code" name="ZIP_code" pattern="[0-9]{5}$" value="{{fields.zip_code_sepa if fields.zip_code_sepa != None else '' }}">
             <span><details>
                 <summary>
                     Help?
@@ -21,7 +21,7 @@
         </li>
         <li>
             <label for="area">City</label>
-            <input type="text" id="area" name="area" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*">
+            <input type="text" id="area" name="area" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*" value="{{fields.city_sepa if fields.city_sepa != None else '' }}">
             <span><details>
                 <summary>
                     Help?
